--- a/pom.xml
+++ b/pom.xml
@@ -35,5 +35,10 @@
             <version>2.3.3</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.33</version> <!-- or latest -->
+        </dependency>
     </dependencies>
 </project>
